--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.css"
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.scss",
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -91,8 +91,8 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.css"
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.scss",
+              "src/styles.scss"
             ],
             "scripts": []
           }
@@ -125,5 +125,10 @@
       }
     }
   },
-  "defaultProject": "book-task"
+  "defaultProject": "book-task",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
